--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lit": "^3.2.0",
     "process": "^0.11.10",
     "pwa-helpers": "^0.9.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
