--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@vaadin/router": "^2.0.0",
     "lit": "^3.2.0",
+    "lit-html": "^3.2.1",
     "process": "^0.11.10",
     "pwa-helpers": "^0.9.1",
     "redux": "^5.0.1",
