--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "analyze:watch": "cem analyze --litelement --globs \"**/*.js\" --exclude docs --watch",
     "serve": "wds --watch",
     "serve:prod": "MODE=prod npm run serve",
-    "test": "npm run test:dev && npm run test:prod",
+    "test": "web-test-runner --config web-test-runner.config.js",
     "test:dev": "wtr",
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
@@ -48,6 +48,7 @@
     "process": "^0.11.10",
     "pwa-helpers": "^0.9.1",
     "redux": "^5.0.1",
+    "sinon": "^19.0.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -61,11 +62,12 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@web/dev-server": "^0.1.31",
     "@web/dev-server-legacy": "^1.0.0",
-    "@web/test-runner": "^0.15.0",
+    "@web/test-runner": "^0.15.3",
     "@web/test-runner-playwright": "^0.9.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "eslint": "^8.15.0",
     "lit-analyzer": "^1.2.1",
+    "playwright": "^1.49.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^4.18.0",
